--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.12",
+    "aws-amplify": "^1.1.6",
+    "aws-amplify-angular": "^2.0.9",
     "core-js": "^2.5.3",
+    "ionic-angular": "^3.9.2",
     "rxjs": "6.2.2",
     "zone.js": "^0.8.26"
   },
